--- a/index.html
+++ b/index.html
@@ -3,30 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trabalhando com formularios</title>
-
-
-    <script src="./script.js" defer></script>
-
+    <link rel="stylesheet" href="./src/style.css">
+    <script src="./src/script.js" defer> </script>
+    <title>cadu projeto</title>
 </head>
 <body>
-    <h1>trabalhando com formularios</h1>
-    <hr>
-    <h2>cadastro dos desenvolvedores</h2>
+    <h2> Cadastro de Devs </h2><br>
 
-    <form id="formDesenvolvedor">
-        <label for="name">Nome:</label><br>
-        <input type="text" name="name" id="name"><br><br>
-        
-        <h3>Novas Tecnologias</h3>
+    <form id="devInfo">
 
-        <button onclick="addContact()">Nova tecnologia</button><br>
+        <label for="nameDev">Nome Completo do Dev:</label>
+        <input type="text" name="nameDev" id="nameDev"><br>
 
+        <button id="createTec">Tecnologias</button>
 
-        <section id ='contact-list'><br>
-
-
-        </section>
     </form>
+    
+    <button id="devRegister">Cadastrar</button>
+
 </body>
 </html>
